criação da página de vistos

--- a/main.html
+++ b/main.html
@@ -15,10 +15,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 
   <!-- Estilos Próprios -->
-  <link rel="stylesheet" href="main.css">
+  <!-- Estilos Gerais   -->
+  <link rel="stylesheet" href="geral.css">
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="geral.css">
+  <!-- Estilos desta página -->
+  <link rel="stylesheet" href="main.css">
 
   <title>Site Vistos</title>
 </head>
