--- a/china.html
+++ b/china.html
@@ -15,10 +15,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 
   <!-- Estilos Próprios -->
-  <link rel="stylesheet" href="main.css">
+  <!-- Estilos Gerais   -->
+  <link rel="stylesheet" href="geral.css">
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="footer.css">
-  <link rel="stylesheet" href="geral.css">
+  <!-- Estilos desta página -->
+  <link rel="stylesheet" href="china.css">
 
   <title>Site Vistos</title>
 </head>
@@ -27,7 +29,9 @@
     <nav class="nav">
       <i class="fa-solid fa-bars nav-icone-menu js-icone-menu"></i>
 
-      <img class="nav-logo" src="imagens/logo.png">
+      <a href="main.html">
+        <img class="nav-logo" src="imagens/logo.png" alt="logo">
+      </a>
     </nav>
 
     <ul id="nav-menu" class="nav-menu">
@@ -42,8 +46,99 @@
 
   <main id="main" class="main">
 
+    <div class="turismo-container">
+      <p>
+        VISITANTE
+      </p>
+
+      <p>
+        A CELESTINO poderá cuidar de todas as etapas do seu processo! 
+        Preencheremos o formulário oficial do consulado, pagaremos a taxa e daremos entrada no consulado chinês, 
+        de acordo com a jurisdição de atendimento.
+      </p>
+
+      <p>
+        OBS : Suspenso temporariamente, devido a pandemia. 
+      </p>
+
+      <ul class="lista">
+        <li>
+          Passaporte com data de expiração superior a 6 meses da data da viagem. Clique Aqui para solicitar a emissão do passaporte;
+        </li>
+
+        <li>
+          Formulário preenchido (clique aqui) para acessar;
+        </li>
+
+        <li>
+          1 Foto 3×4 cm recente;
+        </li>
+
+        <li>
+          Passagem ou reserva aérea;
+        </li>
+
+        <li>
+          Voucher de todos os hotéis onde se hospedará;
+        </li>
+
+        <li>
+          Cronograma de viagem detalhando os pontos turísticos que serão visitados;
+        </li>
+
+        <li>
+          Para empregados: 03 últimos holerites ou carta do empregador, em papel timbrado e com carimbo CNPJ, com a identificação do funcionário, a sua ocupação e data de registro. Contrate a CELESTINO para obter o nosso modelo conforme especificações do consulado;
+        </li>
+
+        <li>
+          Para empregadores: carta da empresa, em papel timbrado e com carimbo CNPJ, com a identificação do proprietário e data de início das suas atividades. Contrate a CELESTINO para obter o nosso modelo conforme especificações do consulado;
+        </li>
+
+        <li>
+          Para estudantes: comprovante escolar, declaração de custeio e extratos bancários de um responsável;
+        </li>
+
+        <li>
+          Para autônomos e profissionais liberais: extratos bancários e declaração, com firma reconhecida em cartório, explicando as atividades que exerce. Podemos ajudar a redigir esse conteúdo;
+        </li>
+
+        <li>
+          Para estrangeiros: RNE original;
+        </li>
+
+        <li>
+          Para embarque há necessidade do certificado internacional de vacina contra febre amarela;
+        </li>
+
+        <li>
+          Documentos adicionais poderão ser solicitados a partir da análise do formulário do solicitante;
+        </li>
+
+        <li>
+          Recomendamos a contratação do seguro viagem, devido ao alto custo de tratamento médico do país. Clique Aqui para solicitar a cotação.
+        </li>
+      </ul>
+
+      <p>
+        OBS: O Consulado em São Paulo atenderá os residentes de SP, PR, RS e SC. 
+        O atendimento em Brasília é reservado aos residentes das regiões Centro-Oeste e Norte. Rio de Janeiro, RJ, MG, ES, BA. 
+        Por fim, o consulado de Recife atenderá à região nordeste (com exceção da Bahia).<br><br>
+      </p>
+      
+      <p>
+        Prazo estimado: 5 dias úteis (normal) e 3 dias úteis (urgente).
+        Este é o prazo para pedidos feitos em São Paulo. 
+        Para o prazo nos demais estados, consulte-nos.
+      </p>
+    </div>
+
+
+    <button class="formulario-button">
+      Link Para o Formulário
+    </button>
   </main>
 
   <footer class="footer"></footer>
+  <script type="module" src="china.js"></script>
 </body>
 </html>
