criação do carrossel de textos dos requisitos para o formulário

--- a/html/main.html
+++ b/html/main.html
@@ -16,11 +16,11 @@
 
   <!-- Estilos Próprios -->
   <!-- Estilos Gerais   -->
-  <link rel="stylesheet" href="geral.css">
-  <link rel="stylesheet" href="header.css">
-  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="../styles/geral.css">
+  <link rel="stylesheet" href="../styles/header.css">
+  <link rel="stylesheet" href="../styles/footer.css">
   <!-- Estilos desta página -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../styles/main.css">
 
   <title>Site Vistos</title>
 </head>
@@ -29,7 +29,7 @@
     <nav class="nav">
       <i class="fa-solid fa-bars nav-icone-menu js-icone-menu"></i>
 
-      <img class="nav-logo" src="imagens/logo.png">
+      <img class="nav-logo" src="../imagens/logo.png">
     </nav>
 
     <ul id="nav-menu" class="nav-menu">
@@ -49,6 +49,6 @@
 
   <footer class="footer"></footer>
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="../scripts/main.js"></script>
 </body>
 </html>
