Atualiza o formulário e dinamiza as informações

--- a/html/main.html
+++ b/html/main.html
@@ -29,7 +29,9 @@
     <nav class="nav">
       <i class="fa-solid fa-bars nav-icone-menu js-icone-menu"></i>
 
-      <img class="nav-logo" src="../imagens/logo.png">
+      <a href="main.html">
+        <img class="nav-logo" src="../imagens/logo.png" alt="logo">
+      </a>
     </nav>
 
     <ul id="nav-menu" class="nav-menu">
