--- a/html/eua.html
+++ b/html/eua.html
@@ -47,7 +47,7 @@
   <main id="main" class="main">
 
     <div class="carrossel-requisitos">
-      <div class="wrapper js-wrapper"></div>
+      <div class="wrapper js-wrapper">
     </div>
 
     <a class="formulario-button" href="formulario.html">
@@ -57,6 +57,6 @@
   </main>
 
   <footer class="footer"></footer>
-  <script type="module" src="../scripts/china.js"></script>
+  <script type="module" src="../scripts/eua.js"></script>
 </body>
 </html>
