--- a/html/china.html
+++ b/html/china.html
@@ -29,7 +29,7 @@
     <nav class="nav">
       <i class="fa-solid fa-bars nav-icone-menu js-icone-menu"></i>
 
-      <a href="main.html">
+      <a href="index.html">
         <img class="nav-logo" src="../imagens/logo.png" alt="logo">
       </a>
     </nav>
