--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../styles/header.css">
   <link rel="stylesheet" href="../styles/footer.css">
   <!-- Estilos desta página -->
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/index.css">
 
   <title>Site Vistos</title>
 </head>
@@ -29,7 +29,7 @@
     <nav class="nav">
       <i class="fa-solid fa-bars nav-icone-menu js-icone-menu"></i>
 
-      <a href="main.html">
+      <a href="index.html">
         <img class="nav-logo" src="../imagens/logo.png" alt="logo">
       </a>
     </nav>
@@ -51,6 +51,6 @@
 
   <footer class="footer"></footer>
 
-  <script type="module" src="../scripts/main.js"></script>
+  <script type="module" src="../scripts/index.js"></script>
 </body>
 </html>
