--- a/formulario.html
+++ b/formulario.html
@@ -16,32 +16,16 @@
 
   <!-- Estilos Próprios -->
   <!-- Estilos Gerais   -->
-  <link rel="stylesheet" href="../styles/geral.css">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/footer.css">
+  <link rel="stylesheet" href="styles/geral.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/footer.css">
   <!-- Estilos desta página -->
-  <link rel="stylesheet" href="../styles/formulario.css">
+  <link rel="stylesheet" href="styles/formulario.css">
 
   <title>Site Vistos</title>
 </head>
 <body>
-  <header class="header">
-    <nav class="nav">
-      <i class="fa-solid fa-bars nav-icone-menu js-icone-menu"></i>
-
-      <a href="index.html">
-        <img class="nav-logo" src="../imagens/logo.png" alt="logo">
-      </a>
-    </nav>
-
-    <ul id="nav-menu" class="nav-menu">
-      <li>VISTOS</li>
-      <li>CIDADANIA</li>
-      <li>ITEM 3</li>
-      <li>ITEM 4</li>
-      <li>ITEM 5</li>
-    </ul>
-  </header>
+  <header class="header js-header"></header>
 
   <main id="main" class="main">
     
@@ -116,6 +100,6 @@
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
   <!-- Script próprio -->
-  <script type="module" src="../scripts/formulario.js"></script>
+  <script type="module" src="scripts/formulario.js"></script>
 </body>
 </html>
