--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
   <!-- Estilos Próprios -->
   <!-- Estilos Gerais   -->
-  <link rel="stylesheet" href="../styles/geral.css">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/footer.css">
+  <link rel="stylesheet" href="styles/geral.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/footer.css">
   <!-- Estilos desta página -->
-  <link rel="stylesheet" href="../styles/index.css">
+  <link rel="stylesheet" href="styles/index.css">
 
   <title>Site Vistos</title>
 </head>
@@ -35,6 +35,6 @@
 
   <footer class="footer"></footer>
 
-  <script type="module" src="../scripts/index.js"></script>
+  <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
