preenchimento do footer

--- a/canada.html
+++ b/canada.html
@@ -31,7 +31,7 @@
   <main id="main" class="main">
 
     <div class="carrossel-requisitos">
-      <div class="wrapper js-wrapper">
+      <div class="wrapper js-wrapper"></div>
     </div>
 
     <a class="formulario-button" href="formulario.html">
@@ -40,7 +40,8 @@
     
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer js-footer"></footer>
+  
   <script type="module" src="scripts/canada.js"></script>
 </body>
 </html>
