--- a/formulario.html
+++ b/formulario.html
@@ -94,7 +94,7 @@
     </form>
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer js-footer"></footer>
 
   <!-- JQuery para o formulário -->
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
