--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="grid js-grid"></div>
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer js-footer"></footer>
 
   <script type="module" src="scripts/index.js"></script>
 </body>
