--- a/china.html
+++ b/china.html
@@ -40,7 +40,8 @@
     
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer js-footer"></footer>
+  
   <script type="module" src="scripts/china.js"></script>
 </body>
 </html>
