--- a/vistos.html
+++ b/vistos.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/footer.css">
   <!-- Estilos desta página -->
-  <link rel="stylesheet" href="styles/index.css">
+  <link rel="stylesheet" href="styles/vistos.css">
 
   <title>Site Vistos</title>
 </head>
@@ -28,12 +28,13 @@
   <header class="header js-header"></header>
 
   <main id="main" class="main">
+    <p class="vistos-texto">VISTOS</p>
 
     <div class="grid js-grid"></div>
   </main>
 
   <footer class="footer js-footer"></footer>
 
-  <script type="module" src="scripts/index.js"></script>
+  <script type="module" src="scripts/vistos.js"></script>
 </body>
 </html>
