colocando os botões no wrapper de informações

--- a/china.html
+++ b/china.html
@@ -30,13 +30,17 @@
 
   <main id="main" class="main">
 
-    <div class="carrossel-requisitos">
-      <div class="wrapper js-wrapper"></div>
+    <div class="informacoes-buttons">
+      <i id="anterior" class="fa-solid fa-chevron-left anterior-button js-anterior-button"></i>
+
+      <i id="proximo" class="fa-solid fa-chevron-right proximo-button js-proximo-button"></i>
     </div>
 
-    <a class="formulario-button" href="formulario.html">
-      Link para o Formulário
-    </a>
+    <div class="carrossel-requisitos">
+      <div id="wrapper" class="wrapper js-wrapper"></div>
+    </div>
+
+    
     
   </main>
 
