dinamizando informações e criando inicializações diferentes dependendo da imagem selecionada

--- a/cidadanias.html
+++ b/cidadanias.html
@@ -14,6 +14,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 
+  <!-- Link só para não aparecer o erro lá no inspecionar html -->
+  <link rel="shortcut icon" href="#">
+
   <!-- Estilos Próprios -->
   <!-- Estilos Gerais   -->
   <link rel="stylesheet" href="styles/geral.css">
@@ -44,7 +47,17 @@
         Fusce interdum sem dui, eget scelerisque 
         ligula bibendum vitae. Donec vitae vehicula leo.
 
-        <br><br>Aliquam erat volutpat. Morbi vitae blandit lectus. Praesent at gravida purus, non aliquet lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget orci nulla. Suspendisse quis tincidunt est. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vel elit quis massa sodales molestie a at lectus. Aliquam porttitor placerat est, quis finibus mauris tempus vitae. Pellentesque varius magna mauris, in sagittis justo pretium quis. Etiam fringilla a diam at consequat. Etiam nec nibh erat. 
+        <br><br>Aliquam erat volutpat. Morbi vitae blandit lectus. 
+        Praesent at gravida purus, non aliquet lorem. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Ut eget orci nulla. Suspendisse quis tincidunt est. 
+        Pellentesque habitant morbi tristique senectus et 
+        netus et malesuada fames ac turpis egestas. Integer vel elit 
+        quis massa sodales molestie a at lectus. Aliquam porttitor 
+        placerat est, quis finibus mauris tempus vitae. 
+        Pellentesque varius magna mauris, in sagittis justo 
+        pretium quis. Etiam fringilla a diam at consequat. 
+        Etiam nec nibh erat. 
         Sed egestas molestie enim id vestibulum.
       </p>
 
