--- a/vistos.html
+++ b/vistos.html
@@ -14,6 +14,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 
+  <!-- Link só para não aparecer o erro lá no inspecionar html -->
+  <link rel="shortcut icon" href="#">
+
   <!-- Estilos Próprios -->
   <!-- Estilos Gerais   -->
   <link rel="stylesheet" href="styles/geral.css">
